Update contact information (phone and address) across all pages

--- a/quote.html
+++ b/quote.html
@@ -577,7 +577,7 @@
             <div class="contact-info">
                 <h3>📞 빠른 상담</h3>
                 <p>전화 상담을 원하시면 아래로 연락주세요</p>
-                <p><a href="tel:031-000-0000">031-000-0000</a></p>
+                <p><a href="tel:010-8695-7013">010-8695-7013</a></p>
                 <p style="margin-top: 16px; font-size: 0.9rem; color: #666;">
                     <strong>상담 가능 시간</strong><br>
                     평일 10:00 ~ 16:00<br>
@@ -591,8 +591,8 @@
         <h2 class="footer-brand">디자인지그</h2>
         <p class="footer-tagline">기준으로 완성하는, 오래 가는 인테리어.</p>
         <div class="footer-info">
-            <p>경기도 용인시</p>
-            <p>연락처: <a href="tel:031-000-0000">031-000-0000</a></p>
+            <p>경기도 화성시 반송동 3-10</p>
+            <p>연락처: <a href="tel:010-8695-7013">010-8695-7013</a></p>
             <p>이메일: <a href="mailto:designjig.office@gmail.com">designjig.office@gmail.com</a></p>
         </div>
         <div class="footer-sns">
