--- a/index.html
+++ b/index.html
@@ -1398,8 +1398,8 @@
         <h2 class="footer-brand">디자인지그</h2>
         <p class="footer-tagline">기준으로 완성하는, 오래 가는 인테리어.</p>
         <div class="footer-info">
-            <p>경기도 용인시</p>
-            <p>연락처: <a href="tel:031-000-0000">031-000-0000</a></p>
+            <p>경기도 화성시 반송동 3-10</p>
+            <p>연락처: <a href="tel:010-8695-7013">010-8695-7013</a></p>
             <p>이메일: <a href="mailto:designjig.office@gmail.com">designjig.office@gmail.com</a></p>
         </div>
         <div class="footer-sns">
