Add mobile-responsive styles for area filter tabs

--- a/portfolio.html
+++ b/portfolio.html
@@ -281,6 +281,30 @@
             color: #fff;
         }
 
+        /* 모바일 필터 탭 스타일 */
+        @media (max-width: 768px) {
+            .filter-tabs {
+                gap: 0.2rem;
+                padding: 0 0.5rem;
+            }
+
+            .filter-tab {
+                padding: 0.4rem 0.6rem;
+                font-size: 0.7rem;
+            }
+
+            .area-filter-tabs {
+                gap: 0.3rem;
+                margin-top: -0.5rem;
+                padding: 0 1rem;
+            }
+
+            .area-filter-tab {
+                padding: 0.3rem 0.5rem;
+                font-size: 0.65rem;
+            }
+        }
+
         .portfolio-grid {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
