Fix: Restore original category numbers, add 설계 및 관리비 as 00, fix Enter key blur

--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6212,13 +6212,15 @@
         let asListItems = []; // A/S 관리 리스트 데이터
 
         const categories = [
-            { no: '01', name: '가설공사' }, { no: '02', name: '철거공사' }, { no: '03', name: '설비/방수공사' },
-            { no: '04', name: '확장/단열공사' }, { no: '05', name: '창호공사' }, { no: '06', name: '전기/조명공사' },
-            { no: '07', name: '에어컨공사' }, { no: '08', name: '목공/도어공사' }, { no: '09', name: '필름공사' },
-            { no: '10', name: '타일공사' }, { no: '11', name: '욕실공사' }, { no: '12', name: '도장공사' },
-            { no: '13', name: '도배공사' }, { no: '14', name: '바닥재공사' }, { no: '15', name: '가구공사' },
-            { no: '16', name: '마감공사' }, { no: '17', name: '기타공사' }
+            { no: '01', name: '가설공사' }, { no: '00', name: '설계 및 관리비' }, { no: '02', name: '철거공사' },
+            { no: '03', name: '설비/방수공사' }, { no: '04', name: '확장/단열공사' }, { no: '05', name: '창호공사' },
+            { no: '06', name: '전기/조명공사' }, { no: '07', name: '에어컨공사' }, { no: '08', name: '목공/도어공사' },
+            { no: '09', name: '필름공사' }, { no: '10', name: '타일공사' }, { no: '11', name: '욕실공사' },
+            { no: '12', name: '도장공사' }, { no: '13', name: '도배공사' }, { no: '14', name: '바닥재공사' },
+            { no: '15', name: '가구공사' }, { no: '16', name: '마감공사' }, { no: '17', name: '기타공사' }
         ];
+
+
 
         // 단위 옵션
         const unitOptions = ['식', 'py', 'm²', 'm', 'ea', 'set', 'unit', '면', '자', '롤'];
@@ -12824,6 +12826,7 @@
 
             const categoryMap = {
                 '가설공사': '01', '가설': '01',
+                '설계 및 관리비': '00', '설계': '00', '관리비': '00', '설계비': '00',
                 '철거공사': '02', '철거': '02',
                 '설비/방수공사': '03', '설비': '03', '방수': '03',
                 '확장/단열공사': '04', '확장': '04', '단열': '04',
@@ -12846,6 +12849,8 @@
             if (categoryMap[name]) return categoryMap[name];
 
             // 2. 키워드 부분 일치 검색 (우선순위에 주의)
+            // 설계 및 관리비 키워드 체크
+            if (name.includes('설계') || name.includes('관리비')) return '00';
             // 욕실 관련 키워드를 가장 먼저 체크 (욕실공사에 다양한 세부 공정이 포함됨)
             if (name.includes('욕실') || name.includes('UBR') || name.includes('수도') ||
                 name.includes('조적') || name.includes('참고') || name.includes('악세') ||
@@ -12868,6 +12873,8 @@
 
             return null;
         }
+
+
 
         // 원가관리표 데이터 로드 (전역 데이터)
         function loadCostData() {
